--- a/src/components/Modal/ModalList.module.css
+++ b/src/components/Modal/ModalList.module.css
@@ -1,6 +1,6 @@
-.toggleList{
+/* .toggleList{
   border: 1px solid red;
-}
+} */
 
 .inner{
   margin: 1rem 0;
